tools/gd/src/snapshots/gd__pager__tests__key_prev_file_single_file_is_noop.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 61,
    top_line: 60,
    active_file: Some(
        2,
    ),
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 2,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
