tools/gd/src/snapshots/gd__pager__tests__key_space_toggles_full_context.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 1,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "Full file context",
    full_context: true,
    visual_anchor: 0,
}
