tools/gd/src/snapshots/gd__pager__tests__key_u_active_file_jumps_globally.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 16,
    top_line: 0,
    active_file: Some(
        1,
    ),
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 1,
    mode: Normal,
    status_message: "Hunk 2/6 · a.rs",
    full_context: false,
    visual_anchor: 0,
}
