tools/gd/src/snapshots/gd__pager__tests__key_u_cross_file_boundary.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 36,
    top_line: 30,
    active_file: Some(
        1,
    ),
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 1,
    mode: Normal,
    status_message: "Hunk 1/2 · b.rs",
    full_context: false,
    visual_anchor: 0,
}
